# OpenOasis

./: .clang-format  .codecov.yml  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  mkdocs.yml  requirements.txt
.github/workflows/: codecov.yml  linux.yml  macos.yml  py.yml  sp.yml  windows.yml
Common/JniWrapper/: .gitkeep
Common/PyWrapper/: .gitkeep
Common/core/: .gitkeep
Common/inc/: .gitkeep
DataAnalyseScheme/: .gitkeep
DataAsst/MeshConverters/: GmshMesh.py
DataAsst/tests/: test_GmshMesh.py
DataExtractScheme/: .gitkeep
DataProcessingKits/: .gitkeep
DataVisualizeScheme/: .gitkeep
Dists/Inc/: .gitkeep
Dists/lib/: .gitkeep
Doc/: OpenOasisDevTips.md  README.md
Doc/DataAssts/: README.md
Doc/Models/: README.md
Doc/assets/Logo/: logo.txt
Doc/iAgents/: README.md
Docs/: .gitkeep  BoltzmannEquations.md  ComputingMethods.md  HIMSModel.md  NOTICE.md  NavierStokesEquations-2.md  NavierStokesEquations-3.md  NavierStokesEquations.md  OpenOasisDevelopGuide.md  PipeNetworkHydraulics.md  PipeNetworkModel.md  README.md  SaintVenantEquations.md  XAJModel.md
Docs/en/: .gitkeep
Docs/zh/: .gitkeep
Models/: Launcher.cpp
Models/CommImp/: AbstractAdaptedOutput.cpp  AbstractAdaptedOutput.h  Arguments.cpp  Arguments.h  Describer.cpp  Describer.h  Dimension.cpp  Dimension.h  ElementSet.cpp  ElementSet.h  ExchangeItemEventArgs.cpp  ExchangeItemEventArgs.h  Identifier.cpp  Identifier.h  Input.cpp  Input.h  LinkableComponent.cpp  LinkableComponent.h  LinkableComponentEventArgs.cpp  LinkableComponentEventArgs.h  Output.cpp  Output.h  Quantity.cpp  Quantity.h  SpaceAdaptedOutputFactory.cpp  SpaceAdaptedOutputFactory.h  Time.cpp  Time.h  TimeAdaptedOutputFactory.cpp  TimeAdaptedOutputFactory.h  TimeSet.cpp  TimeSet.h  Unit.cpp  Unit.h  ValueSet2D.cpp  ValueSet2D.h
Models/CommImp/DevSupports/: Element.cpp  Element.h  ElementMapper.cpp  ElementMapper.h  ElementSearchTree.h  ElementSetChecker.cpp  ElementSetChecker.h  ExchangeItemHelper.cpp  ExchangeItemHelper.h  ExtensionMethods.cpp  ExtensionMethods.h  IterationController.cpp  IterationController.h  SpaceAreaAdaptor.cpp  SpaceAreaAdaptor.h  SpaceLengthAdaptor.cpp  SpaceLengthAdaptor.h  SpaceMapAdaptor.cpp  SpaceMapAdaptor.h  TimeAdaptor.cpp  TimeAdaptor.h
Models/CommImp/IO/: LinkLoader.cpp  LinkLoader.h  MeshLoader.cpp  MeshLoader.h  NetworkLoader.h  OutputCsv.h  TaskLoader.h
Models/CommImp/Numeric/: Boundary.h  Config.h  Equation.h  Field.h  Matrix.h  Operator.h  Solver.h  Tensor.h  Vector.h
Models/CommImp/Numeric/FVM/: Boundaries.cpp  Boundaries.h  FvmBoundary.h  FvmOperator.h  FvmSolver.h  GradOperators.cpp  GradOperators.h  LaplacianOperators.cpp  (+1 more)
Models/CommImp/Spatial/: Coordinate.cpp  Coordinate.h  Geom.h  GeomCalculator.cpp  GeomCalculator.h  Grid.cpp  Grid.h  Mesh.h  MeshCalculator.cpp  MeshCalculator.h
Models/CommImp/Temporal/: TimeBuffer.cpp  TimeBuffer.h  TimeSeries.h
Models/Inc/: ExchangeItemChangeEventArgs.h  IAdaptedOutput.h  IAdaptedOutputFactory.h  IArgument.h  IBaseExchangeItem.h  IByteStateConverter.h  ICategory.h  IDescribable.h  IDimension.h  IElementSet.h  IIdentifiable.h  IInput.h  ILinkableComponent.h  IManageState.h  IOutput.h  IQuality.h  IQuantity.h  ISpatialDefinition.h  ITime.h  ITimeSet.h  IUnit.h  IValueDefinition.h  IValueSet.h  LinkableComponentStatus.h  LinkableComponentStatusChangeEventArgs.h
Models/Inc/AdditionalControl/: IComparable.h  ISpaceExtension.h  ITimeExtension.h
Models/ThirdPart/: README.md
Models/ThirdPart/MagicEnum/: WrapMagicEnum.hpp
Models/ThirdPart/RapidCsv/: StartRapidcsv.cpp  rapidcsv.h
Models/ThirdPart/RapidYaml/: StartYaml.cpp  rapidyaml.hpp
Models/ThirdPart/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h  version.h
Models/Utils/: CommConstants.h  CommMacros.h  CsvHandler.cpp  CsvHandler.h  DateTime.cpp  DateTime.h  EventHandler.h  Exception.h  FilePathHelper.cpp  FilePathHelper.h  Interps.h  JsonHandler.cpp  JsonHandler.h  LibraryLoader.cpp  LibraryLoader.h  Logger.cpp  Logger.h  MapHelper.h  MultiIndexMapper.h  RegisterFactory.h  ScopeGuard.h  StringHelper.cpp  StringHelper.h  VectorHelper.h  YamlHandler.cpp  YamlHandler.h
Models/tests/: testCsvHandler.cpp  testDatetime.cpp  testFilePathHelper.cpp  testJsonHandler.cpp  testMatrix.cpp  testStringHelper.cpp  testVectorField.cpp  testVectorMapHelper.cpp  testYamlHandler.cpp
Models/wrappers/: OasisFlows.cpp  OasisFlows.h  PyOasisFows.cpp
OasisAgent/: README.md
Resources/: .gitkeep  README.md
Resources/Examples-1/: README.md
Resources/Examples-2/: README.md
Resources/Examples-3/: README.md
Resources/example1st/: README.md
Resources/example2nd/: README.md
Resources/example3rd/: README.md
Resources/others/: README.md
Rsrc/Benchmarks/: README.md
Rsrc/Benchmarks/heat_conduction_model/: task.yaml
Rsrc/TheoryBriefs/: README.md
SystemCarbonCirculation/: README.md
SystemCarbonFlow/: README.md
SystemHeatFlow/: README.md
SystemThermalCirculation/: README.md
SystemWaterCirculation/: README.md  TODO.md
SystemWaterCirculation/ApiModelwithMsk/: README.md
SystemWaterCirculation/FluidDynamicModel/: README.md
SystemWaterCirculation/HydrodynamicModel/StandardNavierStokesModel/: README.md
SystemWaterCirculation/HydrologicModel/ApiModel/: README.md
SystemWaterCirculation/HydrologicModel/HimsModel/: README.md
SystemWaterCirculation/MskModel/: README.md
SystemWaterCirculation/NsModel1D/: README.md
SystemWaterCirculation/NsModel2D/: README.md
SystemWaterCirculation/NsModel3D/: README.md
SystemWaterCirculation/SvModel1D/: README.md
SystemWaterCirculation/SvModel2D/: README.md
SystemWaterCirculation/WaterDynamicModel/: README.md
SystemWaterCirculation/XajModel/: README.md
SystemWaterCirculation/XajModelwithMsk/: README.md
SystemWaterFlow/HydrodynamicModel/StandardSaintVenantModel/: README.md
Tools/: .gitkeep
iAgents/: __init__.py
(+384 files in other folders)
